--- a/docs/Movies.Rmd
+++ b/docs/Movies.Rmd
@@ -13,17 +13,28 @@ library(tidyverse)
 library(ggplot2)
 library(pander)
 library(scales)
+library(DT) 
+library(mosaic)
 
 movies <- read_csv("~/Fall 2024/Professional Projects/Data/movies.csv")
+movies <- movies %>% 
+  select(where(~ !all(is.na(.))))
+
 ```
 
 
-Movies have almost always been a go to topic to get conversations started, especially when meeting someone for the first time. It helps get a grasp on what others might be interested in, as well as possible movie recommendations. As I collected data for this, I tried to stick to more well known movies, but included movies from varying genres and ratings (G, PG, PG-13, R). Included in the data are 40 movies from each chosen genre, what each movie is rated, the audience score the movie has, and the success it had at the box office with it's worldwide gross.
+Movies have almost always been a go to topic to get conversations started, especially when meeting someone for the first time. It helps get a grasp on what others might be interested in, as well as possible movie recommendations. As I collected data for this, I tried to stick to more well known movies, but included movies from varying genres and ratings (G, PG, PG-13, R). Included in the data are 40 movies from each chosen genre, what each movie is rated, the audience score the movie has, and the success it had at the box office with it's worldwide gross. The data collected is all from [IMDb](https://www.imdb.com/)
 
 ## {.tabset .tabset-pills .tabset-fade}
 
 ### Genre
 #### **Genre VS Box Office**
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+
+  
+```
+
 
 
 
@@ -35,6 +46,8 @@ Movies have almost always been a go to topic to get conversations started, espec
 ### Rating
 #### **Rating VS Box Office**
 
+
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 movies <- movies %>%
   mutate(gross = as.numeric(gsub("[^0-9]", "", gross)))
@@ -45,7 +58,7 @@ RatingMean <- movies %>%
 
 ggplot(RatingMean, aes(x = rating, y = avg, fill = rating))+
   geom_bar(stat = "identity", color = "black")+
-    geom_text(aes(label = scales::dollar(avg)), vjust = -0.5, size = 3) + 
+  geom_text(aes(label = scales::dollar(avg)), vjust = -0.5, size = 3) + 
   scale_y_continuous(labels = scales::dollar_format()) +
   labs(
     title = "Average Gross by Movie Rating",
@@ -59,14 +72,11 @@ ggplot(RatingMean, aes(x = rating, y = avg, fill = rating))+
 
 ```
 
-```{r}
-
-```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 ggplot(movies, aes(x = factor(rating), y = gross))+
-  geom_dotplot(binaxis = "y", stackdir = "up", position = "dodge", dotsize = 0.5)+
-   ylim(0, 500000000)+
+  geom_dotplot(binaxis = "y", stackdir = "up", position = "dodge", dotsize = 0.4)+
+   ylim(0, 1000000000)+
   labs(
     title = "Worldwide Gross Success by Rating",
     x = "Movie Rating",
@@ -75,7 +85,10 @@ ggplot(movies, aes(x = factor(rating), y = gross))+
 
 ```
 
-
+### Data
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+datatable(movies, options=list(lengthMenu = c(3,10,30)), extensions="Responsive")
+```
 
 
 ##
