--- a/docs/Weather.Rmd
+++ b/docs/Weather.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Weather Predictor"
+title: "Idaho Falls Weather Patterns and Weather Predictor"
 output:
   html_document:
     theme: flatly
@@ -15,18 +15,164 @@ library(pander)
 library(scales)
 library(DT) 
 library(mosaic)
+library(readxl)
 
-IFweather <- read_csv("~/Fall 2024/Professional Projects/Data/weather.csv")
-IFweather <- IFweather %>% 
+IFweather <- read_excel("~/Fall 2024/Professional Projects/Data/weather.xlsx")
+IFweather <- IFweather <- IFweather <- IFweather %>% 
   select(where(~ !all(is.na(.))))
+
+IFweather <- IFweather %>%
+  mutate(date = ymd(paste(year, month, day, sep = "-")))
+
+IFweather <- IFweather %>%
+  arrange(date) 
+
+
 ```
 
 ## {.tabset .tabset-pills .tabset-fade}
-### Idaho Falls Weather
-Idaho Falls, Idaho, a place where, compared to many other places, there's ample snow, strong winds, and cold temperatures. The weather may not seem to always be predictable, but with the data that I was able to collect using [Weather Underground](https://www.wunderground.com/history/daily/us/id/idaho-falls/KIDIDAHO6/date/2024-1-6), I have put together an analysis comparing past and present weather patterns to help create a weather model predictor. 
+### Weather Patterns
+Idaho Falls, Idaho, a place where, compared to many other places, there's ample snow, strong winds, and cold temperatures. The weather may not seem to always be predictable, but with the data that I was able to collect using [Weather Underground](https://www.wunderground.com/history/daily/us/id/idaho-falls/KIDIDAHO6/date/2024-1-6), I have put together an analysis comparing past and present weather patterns to help create a weather model predictor.
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+IFweather <- IFweather %>%
+  mutate(month_name = case_when(
+    month == 1 ~ "January",
+    month == 2 ~ "February",
+    month == 3 ~ "March",
+    month == 4 ~ "April",
+    month == 5 ~ "May",
+    month == 6 ~ "June",
+    month == 7 ~ "July",
+    month == 8 ~ "August",
+    month == 9 ~ "September",
+    month == 10 ~ "October",
+    month == 11 ~ "November",
+    month == 12 ~ "December"
+  ))
+
+IFweather <- IFweather %>%
+  mutate(month_name = month.name[month])
+
+month_colors <- c(
+  "January" = "#0000FF",     
+  "February" = "#00BFFF",    
+  "March" = "#00FF00",      
+  "April" = "#32CD32",       
+  "May" = "#2E8B57",         
+  "June" = "#008080",       
+  "July" = "#4682B4",        
+  "August" = "#5F9EA0",      
+  "September" = "#1E90FF",   
+  "October" = "#87CEEB",     
+  "November" = "#00CED1",    
+  "December" = "#191970")
+
+IFweather <- IFweather %>%
+  mutate(month_name = factor(month_name, levels = month.name))
+
+IFweather$avgtemp <- as.numeric(IFweather$avgtemp)
+
+ggplot(IFweather, aes(x = day, y = avgtemp, color = month_name))+
+  geom_line(aes(group = interaction(year, month_name)), alpha = 0.7, show.legend = FALSE) +
+  geom_point(alpha = 0.5, show.legend = FALSE) +
+  facet_wrap(~month_name, ncol = 3) +
+  scale_color_manual(values = month_colors) +
+  labs(
+    title = "Average Temperature Patterns by Month", 
+    x = "Day of the Month", 
+    y = "Average Temperature (Fahrenheit)") +
+  theme_minimal() +
+    theme(
+    axis.text.x = element_text(angle = 45, hjust = 1), 
+    strip.text = element_text(size = 12))
+```
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+IFweather$avgtemp <- as.numeric(IFweather$avgtemp)
+
+avgmonthtemp <- IFweather %>% 
+  group_by(month_name) %>% 
+  summarize(meantemp = mean(avgtemp, na.rm = TRUE)) %>%
+  arrange(match(month_name, month.name))
+
+ggplot(avgmonthtemp, aes(x = month_name, y = meantemp, fill = month_name))+
+  geom_bar(stat = "identity", show.legend = FALSE)+
+  geom_text(aes(label = round(meantemp, 1)), vjust = -0.5, size = 3) +
+  scale_fill_manual(values = month_colors) + 
+  labs(
+    title = "Average Temperature by Month",
+    y = "Average Temperature",
+    x = "Month") +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1),
+    plot.title = element_text(hjust = 0.5, size = 16, face = "bold"))
+
+```
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+IFweather$precip <- as.numeric(IFweather$precip)
+
+avgmonthprecip <- IFweather %>% 
+  group_by(month_name) %>% 
+  summarize(meanprecip = mean(precip, na.rm = TRUE))
+
+ggplot(avgmonthprecip, aes(x = month_name, y = meanprecip))+
+  geom_line(aes(group = 1, color = "Line"), size = 1, show.legend = FALSE) +
+  geom_point(aes(color = "Points"), size = 2, alpha = 0.8, show.legend = FALSE) +
+  labs(title = "Average Amount of Precipitation per Month \n (Nov 1, 2021 - Nov 1, 2024)", 
+       x = "Month", 
+       y = "Average Precipitation (in)")+
+  theme_minimal() +
+  theme(
+  axis.text.x = element_text(angle = 45, hjust = 1),
+  plot.title = element_text(hjust = 0.5, size = 16, face = "bold")) +
+  scale_color_manual(
+    values = c("Line" = "#5F9EA0", "Points" = "black"))
+```
+### Predictor
+
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+IFweatherlag <- IFweather %>%
+  mutate(templag = lag(avgtemp, 3),
+         dewlag = lag(dew, 3),
+         sealag = lag(sea, 3)) %>% 
+  na.omit()
+
+IFweatherlag$templag <- as.numeric(IFweatherlag$templag)
+IFweatherlag$dewlag <- as.numeric(IFweatherlag$dewlag)
+IFweatherlag$sealag <- as.numeric(IFweatherlag$sealag)
+
+
+mylm <- lm(templag ~ dewlag + sealag, data = IFweatherlag)
+summary(mylm) %>% 
+  pander()
+
+
+recent_data <- tail(IFweather, 3)
+
+new_data <- data.frame(
+  templag = recent_data$avgtemp[3],  
+  dewlag = recent_data$dew[3],
+  sealag = recent_data$sea[3])
+
+predicted_temp <- predict(mylm, newdata = new_data)
+print(predicted_temp) %>% 
+  pander()
+
+
+```
+$$
+  \underbrace{\hat{Y}_i}_\text{Predicted Temp} = \overbrace{-36.37}^\text{est. y-int} + {1.357} \underbrace{X_i}_\text{Dew Point} + {1.595}\underbrace{X_i}_\text{Sea Level Pressure}
+$$
+
+
+
 
 ### Data
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 datatable(IFweather, options=list(lengthMenu = c(3,10,30)), extensions="Responsive")
 ```
 ##
+
